2008-10-07  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/index.wml: 
	  populate the speckhackfest on the gnome.org frontpage

2008-10-06  Andre Klapper  <a9016009@gmx.de>

	* www.gnome.org/start/schedule-unstable.ics: 
	  Upload 2.25 schedule ics

2008-10-04  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/devtools/Makefile.am: 
	  add the missing Makefile to devtools, which failed previously

2008-10-04  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/index.wml: 
	  undo changes on the frontpage which should not have been
	  committed, sorry guys

2008-10-04  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/index.wml,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  remove the html suffix from the cheese page links

2008-09-30  Dave Neary  <dneary@gnome.org>

	* www.gnome.org/mobile/index.wml
	* www.gnome.org/mobile/archmap.css: Update the links after updating
	the architecture graphic. Should have done this before: oops.

2008-09-28  Dodji Seketeli  <dodji@gnome.org>

	* www.gnome.org/projects/nemiver/index.html: Updated for Nemiver 0.6.3
	  release.

2008-09-25  Robert Ancell  <robert.ancell@gmail.com>

	* www.gnome.org/projects/index.wml: Added GCalctool to project list

2008-09-24  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/devel.html: 
	* www.gnome.org/projects/garnome/index.html: Two point Twenty Four.

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess:
	* www.gnome.org/img/flash/Makefile.am:
	* www.gnome.org/img/flash/two-twenty-four.png:
	* www.gnome.org/index.wml:
	* www.gnome.org/start/index.wml: GNOME 2.24.0 is out!

2008-09-23  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/shadowbox/css/shadowbox.css,
	  www.gnome.org/projects/cheese/data/shadowbox/images/loading.gif,