@@ -140,6 +140,19 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>October 20th 2008</h3>
+          <p>
+          <b>Stable</b>
+          version 2.24.1 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>exit correctly with unknown command line arguments</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-October/msg00023.html">full release notes</a>)
+
           <h3>September 22nd 2008</h3>
           <p>
           <b>Stable</b>
