@@ -1,3 +1,9 @@
+2008-10-21  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  populate the cheese 2.24.1 release
+
 2008-10-07  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/index.wml: 
